place holder değişti

--- a/Hospital.WEB/Views/Login/Index.cshtml
+++ b/Hospital.WEB/Views/Login/Index.cshtml
@@ -28,7 +28,7 @@
 
              <div class="row col-10" >
                 <div class="col-3"> <label> Şifre: </label></div>
-                <div class="col-7"><input type="password" class="form-control" name="password" placeholder="Şifre: "> </div>
+                <div class="col-7"><input type="password" class="form-control" name="password" placeholder="123456789: "> </div>
              </div> 
 
              <div class="row col-10">
