--- a/Hospital.WEB/Views/Shared/_Layout.cshtml
+++ b/Hospital.WEB/Views/Shared/_Layout.cshtml
@@ -53,6 +53,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/jquery.min.js" type="text/javascript"></script>
+    <script src="~/js/jquery.dataTables.min.js" type="text/javascript"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
