--- a/Hospital.WEB/Views/Patient/Index.cshtml
+++ b/Hospital.WEB/Views/Patient/Index.cshtml
@@ -228,7 +228,7 @@
                     '<td>' + [item.date] + '</td>' +
                     '<td>' + [item.polyclinicName] + '</td>' +
                     '<td>' + [item.doctorNameSurname] + '</td>' +
-                        '<td> <a onclick="GetSelected(' + [item.id] + ',\'' + [item.date] + '\',\'' + [item.polyclinicId] + '\',\'' + [item.polyclinicName] + '\',\'' + [item.doctorId] + '\',\'' + [item.doctorNameSurname] + '\');" > <i class="bi bi-box-arrow-in-down"></i> </a> </td > ' +
+                    '<td> <a onclick="GetSelected(' + [item.id] + ',\'' + [item.date] + '\',\'' + [item.polyclinicId] + '\',\'' + [item.polyclinicName] + '\',\'' + [item.doctorId] + '\',\'' + [item.doctorNameSurname] + '\');" > <i class="bi bi-box-arrow-in-down"></i> </a> </td > ' +
                     '</tr>')).draw();
                     
                     
@@ -276,7 +276,7 @@
     }
 
     //yukarıya id ve tarih parametresi gönderdik a nın içine GetAppointmentda
-    function GetSelected(id, date, polyclinicId, polycinicName, doctorId, doctorNameSurname) {
+    function GetSelected(id, date, polyclinicId, polyclinicName, doctorId, doctorNameSurname) {
         
         //alttaki satır tab a basınca isimleri deaktif hale getiricek bi yol.
         //document.getElementById('name').readOnly=true;
@@ -288,7 +288,7 @@
         //option ı oluşturduk ve seçicez yani kayıtlı olan(randevudaki) polyclinici ekrana yazdırıcaz opt nin selected metodu ama her seferinde seçili bölümü bi daha eklio ÇÖZZZ!
 
         opt.value = polyclinicId;
-        opt.innerHTML = polycinicName;
+        opt.innerHTML = polyclinicName;
         opt.selected = "selected"
         select.appendChild(opt);
 
