--- a/Hospital.WEB/Views/Login/Index.cshtml
+++ b/Hospital.WEB/Views/Login/Index.cshtml
@@ -27,9 +27,10 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="../../assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" />
+    <link rel="shortcut icon" href="../../assets/images/hospital32.ico" />
 </head>
 <body>
+    <main>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="content-wrapper d-flex align-items-center auth" @*style="background-color:#D97676"*@>
@@ -40,11 +41,11 @@
                         <div class="auth-form-light text-left p-5" @*style=" background-color:#FFE5E5"*@>
                             @*login ekranının login bgsi*@
                             <div class="brand-logo">
-                                <img src="../../assets/images/logo.svg">
+                                <img src="../../assets/images/hastane.svg">
                             </div>@* purple logosu buradan aktif veya inaktif edilir*@
                             <h4>Hoşgeldiniz</h4>
                             <h6 class="font-weight-light">Devam etmek için lütfen giriş yapınız.</h6>
-                            <form asp-controller="Login" asp-action="SignIn" class="pt-3">
+                                <form asp-controller="Login" asp-action="SignIn" class="pt-3">
                                 <div class="form-group">
                                     <input type="text" class="form-control form-control-lg" name="username" placeholder="Kullanıcı Adı Giriniz">
                                 </div>
@@ -53,7 +54,7 @@
                                 </div>
                                 
                                     <div class="mt-3">
-                                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">Giriş Yap</button> @*a idi butona cevirdik giriş yapma kısmını*@
+                                    <button  class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">Giriş Yap</button> @*a idi butona cevirdik giriş yapma kısmını*@
                                 </div>
                                 
                                 <div class="my-2 d-flex justify-content-between align-items-center">
@@ -92,5 +93,6 @@
     <script src="~/../../assets/js/hoverable-collapse.js"></script>
     <script src="~/../../assets/js/misc.js"></script>
     <!-- endinject -->
+    </main>
 </body>
 </html>
