--- a/Hospital.WEB/Views/Home/Index.cshtml
+++ b/Hospital.WEB/Views/Home/Index.cshtml
@@ -11,6 +11,30 @@
 </div>
 
 <div>
-    <a style="margin-top:20px" class="btn btn-info" asp-action="Index" asp-controller="Patient"> Hasta Kayıt </a>
+    @if (user.userTypeId == 2) //sadece kayıt elemanlarının görebileceği buton kontrolü
+    {
+        <a style="margin-top:20px" id="hastaKayıt" class="btn btn-info" asp-action="Index" asp-controller="Patient"> Hasta Kayıt </a>
+
+    }
+
 </div>
+
+@*    <div id="xxxxx" class="showhide">
+        <div class="hide">
+            <a href="#xxxxx">Buton Göster/ Aç</a>
+        </div>
+    </div>*@
+
+@*<script>
+    function gizleGoster(hastaKayıtID) {
+        var secilenID = document.getElementById(hastaKayıtID);
+        if (secilenID.style.display == "none") {
+            secilenID.style.display = "";
+        } else {
+            secilenID.style.display = "none";
+        }
+    }
+</script>*@
+
+
 
